--- a/Object.defineProperties/index.adoc
+++ b/Object.defineProperties/index.adoc
@@ -3,9 +3,12 @@
 :pygments-style: xcode
 :highlightjs-theme: xcode
 
-[source,javascript]
 ====
+[source,js]
+.example
+----
 include::res/example1.js[]
+----
 ====
 
 
@@ -34,7 +37,7 @@ The descriptor for the property being defined or modified.
 The value associated with the property. Can be any valid JavaScript value (number, object, function, etc.).
 ====
 
-* writable
+* writable(default:false)
 +
 ====
 true if the value associated with the property may be changed with an assignment operator. 
@@ -73,3 +76,67 @@ true if and only if this property shows up during enumeration of the properties 
 ====
 Bear in mind that these attributes are not necessarily the descriptor's own properties. Inherited properties will be considered as well. In order to ensure these defaults are preserved, you might freeze existing objects in the descriptor object's prototype chain upfront, specify all options explicitly, or point to null with Object.create(null).
 ====
+
+.Creating a property
+====
+[source,js]
+----
+include::res/example2.js[]
+----
+====
+
+.Modifying a property
+====
+[source,js]
+.writable attributes
+----
+include::res/example3.js[]
+----
+[source,js]
+.Enumerable attribute
+----
+include::res/example4.js[]
+----
+[source,js]
+.Configurable attribute
+----
+include::res/example5.js[]
+----
+====
+
+.Adding properties and default values
+====
+[source,js]
+----
+include::res/example6.js[]
+----
+====
+
+.Custom Setters and Getters
+====
+[source,js]
+----
+include::res/example7.js[]
+----
+====
+
+.Inheritance of properties
+====
+[source,js]
+.shared
+----
+include::res/ex8.js[]
+----
+[source,js]
+.private
+----
+include::res/ex9.js[]
+----
+[source,js]
+.in data descriptor
+----
+//Unlike accessor properties, value properties are always set on the object itself, not on a prototype
+include::res/ex10.js[]
+----
+====
+
