--- a/EventLoop/index.adoc
+++ b/EventLoop/index.adoc
@@ -13,7 +13,7 @@ include::res/ex1.js[]
 ====
 
 == Why this happenes?
-To understand this you need to know how the event loop handles tasks and microtasks. This can be a lot to get your head around the first time you encounter it. Deep breath…
+To understand this you need to know how the event loop handles *tasks* and *microtasks*. This can be a lot to get your head around the first time you encounter it. Deep breath…
 
 Each 'thread' gets its own *event loop*, so each web worker gets its own, so it can execute independently, whereas all windows on the same origin share an event loop as they can synchronously communicate. The event loop runs continually, executing any tasks queued. An event loop has multiple task sources which guarantees execution order within that source (specs such as IndexedDB define their own), but the browser gets to pick which source to take a task from on each turn of the loop. This allows the browser to give preference to performance sensitive tasks such as user-input. Ok ok, stay with me…
 
@@ -84,12 +84,10 @@ timeout
 
 After each listener callback is called…
 
-[NOTE]
-====
+[quote,— HTML: Cleaning up after a callback step 3]
+____
 If the stack of script settings objects is now empty, perform a microtask checkpoint
-
-— HTML: Cleaning up after a callback step 3
-====
+____
 
 Previously, this meant that microtasks ran between listener callbacks, but .click() causes the event to dispatch synchronously, so the script that calls .click() is still in the stack between callbacks. The above rule ensures microtasks don't interrupt JavaScript that's mid-execution. This means we don't process the microtask queue between listener callbacks, they're processed after both listeners.
 
