--- a/metaProgramming/note.adoc
+++ b/metaProgramming/note.adoc
@@ -1,6 +1,7 @@
 = Meta programming
 :toc: right
 :source-highlighter: highlight.js
+:highlightjs-theme: xcode
 :toclevels: 3
 
 从 ECMAScript 2015 开始，JavaScript 获得了 Proxy 和 Reflect 对象的支持，允许你拦截并定义基本语言操作的自定义行为（例如，属性查找，赋值，枚举，函数调用等）。借助这两个对象，你可以在 JavaScript 元级别进行编程。
